@@ -41,6 +41,7 @@
 * Barclay SmartPay: Add support for credit [shasum]
 * Stripe: Update supported countries list [shasum]
 * AuthorizeNet: Update supported countries list [shasum]
+* Payflow: Update supported countries list [shasum]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
